k8s/06-workspace-service.yml
apiVersion: v1
kind: Service
metadata:
  name: workspace-service
spec:
  selector:
    app: workspace-service
  ports:
    - port: 5002
      targetPort: 5002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspace-service
  template:
    metadata:
      labels:
        app: workspace-service
    spec:
      containers:
        - name: workspace-service
          image: workspace-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5002
