k8s/07-project-service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-service
spec:
  selector:
    app: project-service
  ports:
    - port: 5003
      targetPort: 5003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-service
  template:
    metadata:
      labels:
        app: project-service
    spec:
      containers:
        - name: project-service
          image: project-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5003
