k8s/08-api-gateway.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway-service
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-service
  template:
    metadata:
      labels:
        app: api-gateway-service
    spec:
      containers:
        - name: api-gateway-service
          image: api-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
