k8s/10-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: tuntask-tls-secre
  rules:
    - host: localhost
      http:
        paths:
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 5000

          - path: /workspace-service
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 5000

          - path: /project-service
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 5000

          # OAuth callbacks juga harus lewat gateway
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 5000

          # --- Aturan untuk Frontend ---
          # Aturan catch-all: Semua path lain, kirim ke frontend.
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
